fix: info text alignment on mobile

--- a/src/style.scss
+++ b/src/style.scss
@@ -122,5 +122,6 @@ a {
 
   .info {
     font-size: $fontSize / 3;
+    text-align: center;
   }
 }
